feat(batch): memory portability manifest, export, import, and golden test (Groups 1-4) (#997)
* feat(batch): implement SMB manifest model, pre-write refusal, and reconcile ADR-0045 format

- Resolve Blocker B1 and Group 1 tasks (1.1-1.8) of memory-portability spec
- Amend ADR-0045 (§0.1, §4, §5.3, §6, §7.1) to standard ZIP container with per-entry DEFLATE
- Implement SpectorBundleManifest recording schemaVersion (3.0.0), embedding descriptor, counts, and SHA-256 member checksums
- Implement manifest-first read path in SpectorBundleCodec and wire pre-write compatibility check into SpectorImportJobConfig.unpackBundleTasklet
- Enforce invariant V6: corrupt or truncated bundles are refused before creating target directory or writing files to disk
- Reconcile vector layout to vectors/chunk-NNNNN.bin without baking dims into filenames
- Correct SpectorBundleCodec class Javadoc and preserve tested Zip Slip guard

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>
Signed-off-by: Forge <forge@spectrayan.com>

* fix(batch): add inline extraction zip-slip guard and log target namespace

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>
Signed-off-by: Forge <forge@spectrayan.com>

* feat(batch): export reads real memory into portable SMB bundle

- Inject SpectorMemory and SpectorMemoryResolver into SpectorExportJobConfig (Task 2.1, R1.1)
- Stream real memory records into chunked nodes/chunk-NNNNN.jsonl (Task 2.2, R1.2, R2.6)
- Stream real float vectors into vectors/chunk-NNNNN.bin ordinal-aligned with nodes (Task 2.3, R1.2)
- Export real Hebbian edges with endpoint string IDs, typed hyperedges with roles, and temporal facts (Task 2.4, R1.3)
- Omit subsystems/state.json when no biological state is externalized (Task 2.5, R1.4)
- Omit security/keys.json by design until Phase 6 DEK exists (Task 2.6, R1.5)
- Enumerate via index-assisted stable total order (created_at ASC, id ASC) (Task 2.7, R1.6)
- Support scoping by namespace, tier, time range, and tombstones (Task 